--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Weather</string>
+    <string name="search">Search</string>
+    <string name="choose_another">Choose another</string>
+    <string name="select_state">Select a state:</string>
 </resources>
