Weather for now

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,6 +1,18 @@
 <resources>
     <string name="app_name">Прогноз погоды</string>
     <string name="search">Поиск</string>
-    <string name="choose_another">Choose another</string>
+    <string name="choose_another">Выбрать другой</string>
     <string name="select_state">Выберите регион:</string>
+    <string name="now">Сейчас</string>
+    <string name="day">24 часа</string>
+    <string name="five_days">5 дней</string>
+    <string name="wind">Ветер</string>
+    <string name="m_s">м/с</string>
+    <string name="wind_gusts">Порывы ветра, до</string>
+    <string name="feels_like">Ощущается как</string>
+    <string name="humidity">Влажность</string>
+    <string name="clouds">Облачность</string>
+    <string name="atmospheric_pressure">Атмосферное давление</string>
+    <string name="precipitation_probability">Вероятность осадков</string>
+    <string name="visibility">Видимость</string>
 </resources>
