--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Прогноз погоды</string>
+    <string name="app_name">Погода</string>
     <string name="search">Поиск</string>
     <string name="choose_another">Выбрать другой</string>
     <string name="select_state">Выберите регион:</string>
@@ -18,5 +18,8 @@
     <string name="check_internet_connection">Проверьте интернет соединение</string>
     <string name="ok">ОК</string>
     <string name="locate">Местоположение</string>
+    <string name="retry">Повторить</string>
+    <string name="data_was_not_found">Данные не найдены</string>
+    <string name="error_empty_name">Введите название</string>
 
 </resources>
