--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,8 @@
     <string name="check_internet_connection">Check your internet connection</string>
     <string name="ok">ОК</string>
     <string name="locate">Locate</string>
+    <string name="retry">Retry</string>
+    <string name="data_was_not_found">Data was not found</string>
+    <string name="error_empty_name">Enter the name</string>
 
 </resources>
